# cam-weight-wiz

./: .env.device  .gitignore  .release-commit  .xinitrc  AUDIT_RESULTS.md  BUGFIX_SUMMARY.md  COMPLETED.md  DEPLOYMENT.md  FEATURES_STATUS.md  FIXES_SUMMARY.md  INSTALACION_RAPIDA.md  INTEGRATION.md  MANIFEST.in  MINI_WEB_AND_AP.md  PROMPT.md  README.md  RECOVERY_MODE.md  TODO.md  bun.lockb  env.example  index.html  package-lock.json  package.json  pyproject.toml  requirements-voice.txt  requirements.txt  tailwind.config.ts  vite.config.ts
backend/: asgi.py  audio.py  audio_utils.py  camera.py  camera_service.py  main.py  miniweb.py  ocr_models.py  ocr_service.py  scale_service.py  serial_scale_service.py  utils_urls.py  voice.py  voice_prefs.py  voice_ptt.py  wake.py
bascula/: __init__.py  state.py
components/: GlucoseHeaderBadge.tsx  NotificationBar.tsx  NumericKeyboard.tsx
docs/: INSTALL.md  audit-cam-weight-wiz.md  barcode-hybrid-prompt.md  food_scanner_setup.md  generator-prompt.md  recovery-audit-2025-02-15.md
hooks/: useReducedMotion.ts  useScaleDecimals.ts
lib/: backendSettings.ts  validation.ts
nginx/: bascula.conf
prompts/: fix_bascula_all.prompt
public/: manifest.json  service-worker.js  service-worker.tmpl.js
scripts/: README.md  bascula-ap-ensure.sh  bascula-ota  build.sh  choose_kiosk_target.py  ensure-ap.sh  fetch-piper-voices.sh  fetch-vosk-model.sh  fix-serial.sh  generate-service-worker.mjs  install-2-app.sh  install-3-extras.sh  install-all-v2.sh  install-all.sh  kiosk-launch.sh  migrate_2025_10.sh  net-fallback.sh  setup-ap-mode.sh  (+9 more)
(+155 files in other folders)
