[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "bascula-backend"
version = "0.1.0"
description = "Servicios backend para la Báscula Digital Pro"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bascula Team" }]
license = { text = "Proprietary" }

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["backend", "backend.*"]

[tool.setuptools.package-data]
backend = ["audio/*.py"]
